# Tracker

./: .cursorrules  Dockerfile  fly.toml  manage.py  package-lock.json  pyproject.toml  requirements.txt  tracker_db
SPA/: .prettierrc  config-overrides.js  jsconfig.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
SPA/public/: index.html  sitemap.xml
SPA/src/: .env.local  App.css  App.js  App.tsx  MobileView.module.styl  MobileView.tsx  constants.ts  env.d.ts  index.html  index.tsx  manifest.json  routes.js  utils.js
SPA/src/common/: isMobile.ts  reducer.js  reducer.ts  utils.ts
SPA/src/components/: index.js  index.ts
SPA/src/hooks/: index.js  userHooks.js
SPA/src/routing/: AuthenticatedWrapper.tsx  TourAuthenticatedWrapper.tsx  context.tsx  index.tsx  routes.tsx
SPA/src/store/: api.ts  config.js  index.ts  rootReducer.js  rootReducer.ts
api/: urls.py
api/serializer/: accounts.py  invoice.py  money_tracker.py  pricing.py
api/serializer/money_tracker/: __init__.py  output_serializer.py
api/tests/: accounts.py
app/accounts/: google.py  models.py  views.py
app/accounts/migrations/: 0001_initial.py  0002_alter_modeluser_email.py  0002_userprofile.py  0003_alter_modeluser_username.py  0003_remove_userprofile_account_name_and_more.py  0004_userprofile_card_name_userprofile_card_number_and_more.py
app/invoice/: a copy.html  a.html  admin.py  apps.py  models.py  tests.py  views.py  widgets.py
app/invoice/migrations/: 0001_initial.py  0002_alter_invoice_extra_info_alter_invoice_uuid.py  0003_client_user_alter_invoice_status_alter_invoice_user_and_more.py  (+37 more)
app/money_tracker/: admin.py  apps.py  models.py  utils.py  views.py
app/pricing/: admin.py  apps.py  models.py  views.py
constants/: fields.py  utils.py
lib/: fields.py  tasks.py  utils.py
tracker/: celery.py  urls.py  wsgi.py
tracker/settings/: base.py  dev.py  prod.py
(+215 files in other folders)
