[tool.poetry]
name = "tracker"
version = "0.1.0"
description = ""
authors = ["NerdPraise <praiseajayi2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.5"
asgiref = "3.7.2"
autopep8 = "2.0.4"
django = "5.0.2"
django-cors-headers = "4.3.1"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.3.1"
flake8 = "7.0.0"
mccabe = "0.7.0"
pycodestyle = "2.11.1"
pyflakes = "3.2.0"
pyjwt = "2.8.0"
python-decouple = "3.8"
pytz = "2024.1"
sqlparse = "0.4.4"
toml = "0.10.2"
ruff = "0.3.0"
isort = "5.13.2"
celery = "5.4.0"
redis = "5.0.4"
requests = "2.32.3"
drf-yasg = "^1.21.7"
dj-database-url = "^2.2.0"
django-json-widget = "2.0.1"
gunicorn = "^23.0.0"
django-storages = { extras = ["s3"], version = "^1.14.4" }
django-celery-results = "2.5.1"
psycopg2-binary = "^2.9.10"
setuptools = "^75.6.0"
pillow = "^11.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
